[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "utecio"
version = "0.0.2"
requires-python = ">=3.7"
description = "Library for controlling Ultraloq BLE Locks"
dependencies = [
    "ecdsa",
    "bleak",
    "pycryptodome",
    "aiohttp"
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/maeneak/utecio"
Issues = "https://github.com/maeneak/utecio/issues"
